# hermes-agent-memory

./: .env.example  .gitignore  README.md  __init__.py  after-install.md  config.py  embeddings.py  extraction.py  plugin.yaml  provider.py  pyproject.toml  retrieval.py  store.py  tools.py
benchmarks/: README.md  __init__.py
benchmarks/longmemeval/: __init__.py  build_openviking_index.py  inspect_results.py  run.py
src/: __init__.py  default_config.yaml  embeddings.py  provider.py  retrieval.py  store.py
tests/: test_config_defaults.py  test_embeddings.py  test_longmemeval_benchmark.py  test_longmemeval_inspect_results.py  test_memory_loop.py
